public interface IProjeto {
    
    public void submeterProjetoPesquisa();
	public void submeterProjetoExtensao();

}
