package br.com.academico.aluno;

public enum SituacaoAluno {
    Aprovado,
    Recuperacao,
    Reprovado
}
